--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Sala - Rocket.Q</title>
     <!-- CSS -->
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="stylesheet" href="/styles/home.css">
@@ -13,6 +12,11 @@
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap">
+
+    <!-- SCRIPTS-->
+    <script src="/scripts/checkPeriod.js" defer></script>
+
+    <title>Criar Sala - Rocket.Q</title>
 </head>
 <body>
     <div id="home" class="content">
@@ -21,6 +25,7 @@
                 <img src="/images/Logo.svg" alt="Rocket.Q">
             </a>
             
+            <input type="checkbox" id="switchPeriod" aria-label="checkPeriod">
         </header>
         <div id="bg">
             <div class="ball top"></div>
