--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -39,7 +39,6 @@
                         <img src="/images/users-white.svg" alt="Criar uma sala">
                         Criar Sala
                     </a>
-                    <input type="checkbox" id="switchPeriod">
                 </div>
             </header>
 
@@ -48,10 +47,12 @@
                     <h2>Faça sua pergunta</h2>
                     <div class="day-period">
                         <div class="image">
-                            <div class="sol"><img src="/images/Sol.svg" alt="Sol">
+                            <div class="sol">
+                                <img src="/images/Sol.svg" alt="Sol">
                             </div>
 
-                            <div class="lua"><img src="/images/Lua.svg" alt="Lua">
+                            <div class="lua">
+                                <img src="/images/Lua.svg" alt="Lua">
                             </div>
                         </div>
                     </div>
