--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -130,9 +130,48 @@ button.grey,
 .content header img{
     width: 16.7rem;
 }
+/*========= button Day / Night ===========*/
 
-/** Periodo do Dia **/
+.day-period{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 
-body.periodDay{
-    background: var(--grey-dark);
+    margin-bottom: 0.5rem;
+}
+.day-period .image{
+    display: flex;
+    align-items: center;
+    width: 8rem;
+    height: 3rem;
+    justify-content: space-between;
+}
+.image .sol{
+    margin-top: 0.2rem;
+    height: 3rem;
+    width: 4rem;
+    border: 2px solid var(--blue);
+    border-radius: .8rem 0 0 .8rem;
+    background: var(--white);
+    margin-right: 0.2rem;
+    z-index: 10;
+}
+.image .lua{
+    margin-top: 0.2rem;
+    height: 3rem;
+    width: 4rem;
+    border: 2px solid var(--blue);
+    border-radius: 0 .8rem .8rem 0;
+    background: var(--white);
+    z-index: 10;
+}
+.image .sol:hover, .image .lua:hover{
+    background: var(--grey-medium);
+    cursor: pointer;
+}
+.day-period .image img{
+    height: 2.5rem;
+    width: 3.5rem;
 }
