--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -24,8 +24,17 @@
             <a href="/">
                 <img src="/images/Logo.svg" alt="Rocket.Q">
             </a>
-            
-            <input type="checkbox" id="switchPeriod" aria-label="checkPeriod">
+            <div class="day-period">
+                <div class="image">
+                    <div class="sol">
+                        <img src="/images/Sol.svg" alt="Sol">
+                    </div>
+
+                    <div class="lua">
+                        <img src="/images/Lua.svg" alt="Lua">
+                    </div>
+                </div>
+            </div>
         </header>
         <div id="bg">
             <div class="ball top"></div>
