--- a/src/views/parts/create-pass.ejs
+++ b/src/views/parts/create-pass.ejs
@@ -2,7 +2,7 @@
     <h2>Crie sua própria Sala</h2>
     <form action="/create-room" method="POST">
         <label for="room-pass" class="sr-only">Insira uma senha</label>
-        <input type="password" name="password" id="room-pass" placeholder="Insira uma senha">
+        <input type="password" name="password" id="room-pass" placeholder="Insira uma senha" required>
         <button>
             <img src="images/users-white.svg" alt="Entrar Sala">Criar Sala
         </button>
