--- a/src/views/parts/enter-room.ejs
+++ b/src/views/parts/enter-room.ejs
@@ -2,7 +2,7 @@
     <h2>Entre como participante</h2>
     <form action="/enterroom" method="POST">
         <label for="room-id" class="sr-only">Código da sala</label>
-        <input name="roomId" type="number" id="room-id" placeholder="Código da sala">
+        <input name="roomId" type="number" id="room-id" placeholder="Código da sala" required>
         <button>
             <img src="images/enter-room.svg" alt="Entrar Sala">Entrar na sala
         </button>
